--- a/order-service.properties
+++ b/order-service.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.password=root
+spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/system
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.initialization-mode=always
+spring.jpa.show-sql=true
